# OpenNovel

./: .env.example  .gitignore  LICENSE  README.md  demo.py  fanqie-api-docs.md  install.bat  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  conflict_design_agent.py  editor_agent.py  genre_research_agent.py  memory_manager_agent.py  planner_agent.py  publisher_agent.py  reviewer_agent.py  short_story_editor_agent.py  short_story_planner_agent.py  short_story_reviewer_agent.py  short_story_writer_agent.py  story_architect_agent.py  writer_agent.py
cli/: chat.py  main.py  theme.py  tui.py
config/: __init__.py  exceptions.py  logging_config.py  settings.py
config/prompts/: conflict_design.md  editor.md  genre_research.md  memory_manager.md  planner.md  reviewer.md  short_story_editor.md  writer.md  (+4 more)
installer/: install.ps1  uninstall.ps1
memory/: __init__.py  chroma_store.py  memory_retriever.py  summarizer.py
models/: __init__.py  chapter.py  character.py  database.py  enums.py  novel.py
publisher/: __init__.py  auth.py  browser.py  fanqie_client.py  short_story_client.py
tests/: conftest.py  test_agent_tools.py  test_agents.py  test_exceptions.py  test_llm_client.py  test_memory.py  test_models.py  test_settings.py  test_text_utils.py  test_workflow.py
tools/: __init__.py  agent_sdk_client.py  agent_tools.py  llm_client.py  style_analyzer.py  text_utils.py  typo_checker.py  updater.py  word_exporter.py
workflow/: __init__.py  callbacks.py  checkpoint.py  conditions.py  graph.py  short_story_graph.py  short_story_state.py  state.py
